--- a/frontend/src/app/routes/consume/consume.component.html
+++ b/frontend/src/app/routes/consume/consume.component.html
@@ -2,7 +2,7 @@
 
 <div class="px-3 mb-4">
   <div class="stat shadow bg-white">
-    <h3 class="stat-title text-gray-700">Total Gastado en el Mes Actual</h3>
+    <h3 class="stat-title text-gray-500">Total Gastado en el Mes Actual</h3>
     <p class="text-2xl font-bold">{{ totalCurrentMonthConsumption | number:'1.2-2' }} $ AR</p>
   </div>
 </div>
@@ -17,27 +17,33 @@
       <div class="text-lg font-semibold">{{ device.name }}</div>
     </div>
     <div class="stat">
-    <div class="stat-title text-gray-700">Último Día</div>
+    <div class="stat-title font-bold text-gray-500">Último Día</div>
     <div class="text-2xl font-bold">{{ device.lastDayConsumption | number:'1.2-2' }} $ AR</div>
 
     </div>
     <div class="stat">
-      <div class="stat-title text-gray-700">Mes Actual</div>
+      <div class="stat-title font-bold text-gray-500">Mes Actual</div>
       <div class="text-2xl font-bold">{{ device.currentMonthConsumption | number:'1.2-2' }} $ AR</div>
 
       </div>
-      <div class="stat">
-        <div class="stat-title text-gray-700">Mes Anterior</div>
+      <div class="stat p-1">
+          <div class="flex items-center">
+            <button (click)="showModal = true" class="bg-blue-300 text-black rounded-full p-2 hover:bg-blue-400 focus:outline-none focus:ring-2 focus:ring-blue-400 animate-pulse">
+              <i class="fa-solid fa-code-compare"></i>
+            </button>
+            <div class="stat-title font-bold text-gray-500">Mes Anterior</div>
+          </div>
         <div class="text-2xl font-bold">{{ device.previousMonthConsumption | number:'1.2-2' }} $ AR</div>
 
         </div>
         <div class="stat">
-          <div class="stat-title text-gray-700">Proyección Mes Actual</div>
+          <div class="stat-title font-bold text-gray-500">Proyección Mes Actual</div>
           <div class="text-2xl font-bold">{{ device.projectedCurrentMonthConsumption | number:'1.2-2' }} $ AR</div>
 
           </div>
-          <div class="stat">
-            <div class="stat-title text-gray-700">Comparación con Mes Anterior</div>
+          <div class="stat p-1">
+              <div class="stat-title font-bold text-gray-500">Comparación con Mes Elegido</div>
+
             <p class="stat-title flex items-center">
               <span [ngClass]="{'text-green-600': device.isSaving, 'text-red-600': !device.isSaving}">
                 {{ getAbsoluteValue(device.savingsPercentage) }}% ({{ device.isSaving ? 'Reducción del consumo' : 'Aumento del consumo'}})
@@ -60,3 +66,17 @@
 </div>
 </div>
 
+<!-- Modal -->
+<input type="checkbox" id="month-selector-modal" class="modal-toggle" [checked]="showModal" />
+<div class="modal">
+  <div class="modal-box">
+    <h3 class="font-bold text-lg">Selecciona un Mes</h3>
+
+    <input type="month" class="input input-bordered w-full" [(ngModel)]="selectedMonth" />
+
+    <div class="modal-action">
+      <button class="btn bg-primary text-white hover:bg-primaryhover" (click)="onMonthSelected(selectedMonth)">Aceptar</button>
+      <button class="btn" (click)="showModal = false">Cancelar</button>
+    </div>
+  </div>
+</div>
