--- a/frontend/src/app/routes/carbon-footprint/carbon-footprint/carbon-footprint.component.html
+++ b/frontend/src/app/routes/carbon-footprint/carbon-footprint/carbon-footprint.component.html
@@ -2,6 +2,26 @@
 <div class="py-1 px-3">
   <div class="flex items-center space-x-4">
 
+    <!-- Filtro por dispositivo -->
+    <div class="py-1 px-3">
+      <div class="select-container flex items-center bg-white rounded-lg p-4 shadow-lg mb-4">
+        <div class="flex flex-col space-y-4 py-6 px-10">
+          <h2 class="text-lg font-semibold">Filtrar por Dispositivo</h2>
+          <select class="border border-gray-300 p-2 rounded">
+            <option value="all">Todos los dispositivos</option>
+            <option value="device1">Dispositivo 1</option>
+            <option value="device2">Dispositivo 2</option>
+            <option value="device3">Dispositivo 3</option>
+            <!-- Agrega más opciones aquí si es necesario -->
+          </select>
+          <button class="bg-primary text-white p-2 rounded hover:bg-primaryhover">
+            Mostrar
+          </button>
+        </div>
+      </div>
+    </div>
+
+
 
     <!--<div class="select-container flex items-center bg-white rounded-lg p-4 shadow-lg">
       <div class="flex flex-col space-y-4 py-6 px-10">
