--- a/frontend/src/app/core/toolbar/toolbar.component.html
+++ b/frontend/src/app/core/toolbar/toolbar.component.html
@@ -17,7 +17,7 @@
         <span class="text-sm font-semibold">Locación</span>
         <select class="p-2 border-none outline-none bg-transparent text-gray-500">
           <option *ngFor="let address of addresses" [value]="address.id">
-            {{ address.street }}
+            {{ address.street }} ({{ getAddressTypeLabel(address.type) }})
           </option>
         </select>
       </div>
