--- a/frontend/src/app/routes/dashboard/dashboard/dashboard.component.css
+++ b/frontend/src/app/routes/dashboard/dashboard/dashboard.component.css
@@ -2,3 +2,14 @@
   width: 100%;
   height: 400px;
 }
+
+::-webkit-scrollbar {
+  height: 8px;
+}
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 4px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
