--- a/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
+++ b/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
@@ -1,17 +1,52 @@
-<div *ngIf="isLoading">
-  <app-loading></app-loading>
-</div>
-<div class="px-3 mb-2" *ngIf="!isLoading">
-  <div class="stats shadow flex flex-wrap px-3">
+<div class="px-3 mb-2" >
+  <div *ngIf="isLoading" >
+    <app-loading></app-loading>
+  </div>
+
+  <div class="relative w-full overflow-hidden bg-base-200 rounded-lg shadow">
+
     <div
-      class="stat w-full sm:w-1/2 md:w-1/3 lg:w-1/6 transform transition-transform hover:scale-105 cursor-pointer"
-      *ngFor="let device of devices"
-    (click)="selectDevice(device.deviceId)">
-      <div class="stat-figure" [ngClass]="{'bg-blue-100 rounded-full p-2': selectedDevice === device.deviceId}">
-        <img [src]="'../../../assets/icon/' + device.name + '.png'" alt="{{ device.name }}" width="34" height="34">
+      class="flex gap-2 overflow-x-auto scroll-smooth snap-x snap-mandatory scrollbar-hide py-2"
+      #scrollContainer
+    >
+      <div
+        class="snap-center flex-shrink-0 w-full md:w-1/2 lg:w-1/6 h-30 bg-white shadow-md rounded-lg flex flex-col items-center justify-center transform transition-transform hover:scale-105 cursor-pointer"
+        *ngFor="let device of devices"
+        (click)="selectDevice(device.deviceId)"
+        [ngClass]="{'border-2 border-blue-400': selectedDevice === device.deviceId}"
+      >
+        <div
+          class="stat-figure"
+          [ngClass]="{'bg-blue-100 rounded-full p-2': selectedDevice === device.deviceId}"
+        >
+          <img
+            [src]="'../../../assets/icon/' + device.name + '.png'"
+            alt="{{ device.name }}"
+            class="w-12 h-12"
+          />
+        </div>
+        <div
+        class="stat-title text-center mt-2 text-sm sm:text-base"
+        [ngClass]="{'text-blue-500 font-bold': selectedDevice === device.deviceId}"
+      >
+        {{ device.name }}
       </div>
-      <div class="stat-title" >{{ device.name }}</div>
+      </div>
     </div>
+
+    <!-- Botones de navegación -->
+    <button
+      (click)="scroll('left', scrollContainer)"
+      class="absolute left-2 top-1/2 -translate-y-1/2 btn btn-circle btn-sm z-10"
+    >
+      ❮
+    </button>
+    <button
+      (click)="scroll('right', scrollContainer)"
+      class="absolute right-2 top-1/2 -translate-y-1/2 btn btn-circle btn-sm z-10"
+    >
+      ❯
+    </button>
   </div>
 </div>
 
